--- a/index.html
+++ b/index.html
@@ -234,6 +234,11 @@
             margin-top: 16px;
             border-radius: 12px;
         }
+
+        .cta-section .btn:hover{
+            background: #e4827b;
+            box-shadow: 0 5px 20px rgba(217, 116, 109, 0.4);
+        }
         
         .highlight {
             color: #D9746D;
